# LIPSedge-sdk-wrappers

./: README.md
csharp/: CMakeLists.txt  README.md
csharp/NiWrapper.Net/NiWrapper/: CMakeLists.txt
opencv/: CMakeLists.txt
opencv/CMake/: SetupBuildEnvironment.cmake
opencv/Ni2SimpleViewer-cv/: CMakeLists.txt
opencv/Ni2SimpleViewer-cv/Source/: main.cpp
python3/: README.md  cv_display_depth_frame.py  eventbased_depth_viewer.py
